crash when multi-view is enabled and switching to BI rendered viewport display #44836

Closed
opened 2015-05-25 12:24:01 +02:00 by Olivier Amrein · 6 comments
Member

Reproduce-it

  • start with default scene
  • enable Views (stereo/multiviews) in render layer tab
  • make sure you are using Blender Internal
  • switch viewport from Solid to Rendered
  • crash

remarks:

  • it doesn’t matter if you are in persp user view or camera view
  • you can also start with an active cycle rendered display, enable MultiViews ,should not crash. Then if you switch the render engine to Blender Render it will crash
  • Also doesn’t crash if you already are in BI Rendered viewport shading and THEN activate multi views
    BUT it crashes as soon as I resize the window…

tested on mac OS X 10.10 and linux mint.
Olivier

**Reproduce-it** - start with default scene - enable Views (stereo/multiviews) in render layer tab - make sure you are using Blender Internal - switch viewport from Solid to Rendered - crash **remarks:** - it doesn’t matter if you are in persp user view or camera view - you can also start with an active cycle rendered display, enable MultiViews ,should not crash. Then if you switch the render engine to Blender Render it will crash - Also doesn’t crash if you already are in BI Rendered viewport shading and THEN activate multi views BUT it crashes as soon as I resize the window… tested on mac OS X 10.10 and linux mint. Olivier
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Dalai Felinto was assigned by Olivier Amrein 2015-05-25 12:24:01 +02:00
Author
Member

Added subscriber: @oenvoyage

Added subscriber: @oenvoyage

Added subscriber: @Sergey

Added subscriber: @Sergey

confirmed, backtrace:

Program received signal EXC_BAD_ACCESS, Could not access memory.
Reason: KERN_INVALID_ADDRESS at address: 0x000000000000000c

0x0000000100749e83 in sky_tile (pa=0x114e43278, rl=0x107f30188) at //blender/source/blender/render/intern/source/rendercore.c:702
702					if (pass[3]<1.0f) {

- 0  0x0000000100749e83 in sky_tile (pa=0x114e43278, rl=0x107f30188) at //blender/source/blender/render/intern/source/rendercore.c:702
- 1  0x000000010074afa0 in zbufshade_tile (pa=0x114e43278) at //blender/source/blender/render/intern/source/rendercore.c:1446
- 2  0x00000001007377a3 in do_part_thread (pa_v=0x114e43278) at /blender/source/blender/render/intern/source/pipeline.c:1012
- 3  0x0000000100737431 in do_render_thread (thread_v=0x116e87320) at //blender/source/blender/render/intern/source/pipeline.c:1185
- 4  0x0000000101349431 in tslot_thread_start (tslot_p=0x114e2dd38) at //blender/source/blender/blenlib/intern/threads.c:252
- 5  0x00007fff872ad899 in _pthread_body ()
- 6  0x00007fff872ad72a in _pthread_start ()
- 7  0x00007fff872b1fc9 in thread_start ()
confirmed, backtrace: ``` Program received signal EXC_BAD_ACCESS, Could not access memory. Reason: KERN_INVALID_ADDRESS at address: 0x000000000000000c 0x0000000100749e83 in sky_tile (pa=0x114e43278, rl=0x107f30188) at //blender/source/blender/render/intern/source/rendercore.c:702 702 if (pass[3]<1.0f) { - 0 0x0000000100749e83 in sky_tile (pa=0x114e43278, rl=0x107f30188) at //blender/source/blender/render/intern/source/rendercore.c:702 - 1 0x000000010074afa0 in zbufshade_tile (pa=0x114e43278) at //blender/source/blender/render/intern/source/rendercore.c:1446 - 2 0x00000001007377a3 in do_part_thread (pa_v=0x114e43278) at /blender/source/blender/render/intern/source/pipeline.c:1012 - 3 0x0000000100737431 in do_render_thread (thread_v=0x116e87320) at //blender/source/blender/render/intern/source/pipeline.c:1185 - 4 0x0000000101349431 in tslot_thread_start (tslot_p=0x114e2dd38) at //blender/source/blender/blenlib/intern/threads.c:252 - 5 0x00007fff872ad899 in _pthread_body () - 6 0x00007fff872ad72a in _pthread_start () - 7 0x00007fff872b1fc9 in thread_start () ```

This issue was referenced by 3a7691b73f

This issue was referenced by 3a7691b73f5f80dc339631909682786c2a4c2e68

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44836
No description provided.