Fix T44836: crash when multi-view is enabled and switching to BI rendered viewport display